--- a/src/bg/css/options.css
+++ b/src/bg/css/options.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    font-family: "Segoe UI", Arial, "Microsoft Yahei", sans-serif;
+    font-family: "Inter", "Sarasa Gothic CL", sans-serif;
     font-size: 12px;
     width: 440px;
     border-radius: 8px;
